packages/errors/test/__snapshots__/EXTENSION_NOT_LOADED.ansi
[31mElectron could not install the extension at path: [94m/path/to/extension[39m[31m[39m
[31m[39m
[31mPlease verify that this is the path to a valid, unpacked WebExtension.[39m